--- a/mobile/ecommerce_app/pubspec.yaml
+++ b/mobile/ecommerce_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.3.1
   build_runner: ^2.4.11
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
