Add new images and update pubspec.yaml and form_button.dart

--- a/mobile/ecommerce_mobile_app/pubspec.yaml
+++ b/mobile/ecommerce_mobile_app/pubspec.yaml
@@ -59,6 +59,8 @@ flutter:
     # To add assets to your application, add an assets section, like this:
     assets:
         - images/deadpool.jpg
+        - images/background_image.jpg
+        - images/logo.jpg
         - images/joker.jpg
         - images/shoe.jpg
         - images/shoe.svg
