--- a/mobile/ecommerce_app/pubspec.yaml
+++ b/mobile/ecommerce_app/pubspec.yaml
@@ -74,6 +74,9 @@ flutter:
     # To add assets to your application, add an assets section, like this:
     assets:
         - images/joker.jpg
+        - images/background_image.jpg
+        - images/logo1.jpg
+        - images/logo2.jpg
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
