--- a/mobile/ecommerce_app/pubspec.yaml
+++ b/mobile/ecommerce_app/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
     rxdart: ^0.28.0
     image_picker: ^1.1.2
     path_provider: ^2.1.4
+    cached_network_image: ^3.4.1
 
 dev_dependencies:
     flutter_test:
