--- a/mobile/ecommerce_app/pubspec.yaml
+++ b/mobile/ecommerce_app/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
     image_picker: ^1.1.2
     path_provider: ^2.1.4
     cached_network_image: ^3.4.1
+    http_parser: ^4.0.2
+    bloc: ^8.1.4
 
 dev_dependencies:
     flutter_test:
